examples/datalog/15_arithmetic/31_division_truncation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_div_trunc
Knowledge graph 'test_div_trunc' created.
Switched to knowledge graph: test_div_trunc
> .kg use test_div_trunc
Switched to knowledge graph: test_div_trunc
> +nums[(7,), (10,), (15,), (-7,)].
Inserted 4 fact(s) into 'nums'.
> div_by_3(X, Y) :- nums(X), Y = X / 3.
Script error: Query execution failed: Unsafe rule: Atom { relation: "div_by_3", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
