examples/datalog/15_arithmetic/31_division_truncation.dl
% Test: Integer division truncation
% Expected: Truncate toward zero
% Category: 15_arithmetic
% Priority: P2 - Arithmetic patterns

.kg create test_div_trunc
.kg use test_div_trunc

+nums[(7,), (10,), (15,), (-7,)].

div_by_3(X, Y) :- nums(X), Y = X / 3.

?- div_by_3(X, Y).

.kg use default
.kg drop test_div_trunc
